# jet

./: .gitignore  download.py  download_data.py  encode.py  jet.py  pyproject.toml  requirements.txt  slurm_torchrun.sh  train.py  train_model.py  train_tokenizer.py
configs/: cluster_config.sh  config.yaml  model_config.yaml  path_config.yaml  path_templates.yaml  tokenizer_config.yaml
configs/project_datasets/: fineweb-1M.yaml  fineweb-edu.yaml  wiki.yaml
dtt/: main.py
dtt/commands/: __init__.py  download.py  tokenize.py  train.py
dtt/core/: loops.py
dtt/utils/: config.py
dtt/utils/model/: __init__.py  dataloading.py
infra/configs/: cluster_config.sh
infra/scripts/: build_cluster.sh  build_worker.sh  env.sh  python_env.sh
jet/: __init__.py  main.py
jet/commands/: __init__.py  download.py  tokenize.py  train.py
jet/core/: __init__.py  data.py  dataprep.py  loops.py  model.py  train.py
jet/utils/: __init__.py  cli.py  config.py  files.py
lr_schedulers/: __init__.py  constant.py  exponential.py  onecycle.py
optimizers/: __init__.py  adamw.py
project_datasets/: __init__.py  fineweb-edu.py  fineweb_100k.py  fineweb_1M.py  fineweb_edu.py  ipl_commentary.py  test.py
sbatch/: encode.sh  tokenize.sh  train.sh  train_model.sh  train_tokenizer.sh
scripts/: build_cluster.sh  build_worker.sh  encode.sh  slurm_tokenize.sh  slurm_torchrun.sh  tokenize_data.sh
scripts/sbatch/: train_tokenizer.sh
src/: data_utils.py  dist_utils.py  file_utils.py  model_utils.py  tokenizer.py  training_loop.py
utils/: files.py
utils/model/: __init__.py  dataloading.py  loops.py
utils/tokenizer/: bpe.py  datastructures.py  tokenizer.py
(+23 files in other folders)
