[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtt"
version = "0.1.0"
dependencies = [
    "datasets==3.1.0",
    "wandb==0.18.3",
    "bpekit @ git+https://github.com/jamie-stephenson/bpekit.git@main"
]

[project.optional-dependencies]
torch = ["torch==2.4.1"]

[project.scripts]
dtt = "dtt.main:app"

[tool.setuptools.packages.find]
where = ["dtt"]


