[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtt"
version = "0.1.0"
dependencies = [
    "datasets==3.1.0",
    "wandb==0.18.3",
    "torch==2.4.1",
    "bpekit @ https://github.com/jamie-stephenson/bpekit/releases/download/v0.1.0-test/bpekit-0.1.0-cp310-abi3-linux_x86_64.whl"
]

[project.scripts]
dtt = "dtt.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtt*"]


